 2003-11-15 Al Riddoch <alriddoch@zepler.org>
    - Fix license typo in the rpm spec.
 2003-09-29 Al Riddoch <alriddoch@zepler.org>
    - Release version 0.3.0
 2003-09-29 Al Riddoch <alriddoch@zepler.org>
    - Add arch dependent header to rpm spec.
 2003-09-29 Al Riddoch <alriddoch@zepler.org>
    - Add libws2_32 which is required for getaddrinfo and friends under
      windows.
    - ping/ping.cpp: Move signal.h so it is available in windows build.
    - test/skstreamtestrunner.cpp: Make the test always return success so
      that distcheck rule works. The test only succeeds if its run as root
      and the echo service is running, both of which are undesirable.
 2003-09-28 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstream.h: Add accessors so address sizes in buffer class
      are accessible from outside stream class.
    - ping/ping.cpp: Re-work code for handling conversion of addresses
      to presentation format for protocol independance.
 2003-09-27 Al Riddoch <alriddoch@zepler.org>
    - test/childskstreamtest.h: Get rid of some of the java-isms, and
      handle some failures a little more cleanly. Fix the udp test.
    - test/skstreamtestrunner.cpp: Ensure that the tests exit status
      reflects whether it passes or fails.
    - Fix Makefile.am so tests are actually run.
 2003-09-27 Al Riddoch <alriddoch@zepler.org>
    - skstream/skstreamconfig.h.windows: Update headers and defines
      to build latest code on MSVC
 2003-09-26 Al Riddoch <alriddoch@zepler.org>
    - Add option to get streams remote details as reverse lookup, rather
      than just presentation form.
 2003-09-26 Al Riddoch <alriddoch@zepler.org>
    - Write elaborate tests to pick up socket calls when building for windows.
    - ping/ping.cpp: Remove unused variable.
 2003-09-26 Al Riddoch <alriddoch@zepler.org>
    - Write some tests to pick up the socket and name resolver libs on
      System V.
    - Clean up handling of libs required to get socket calls in general.