@@ -1,3 +1,7 @@
+ 2003-12-08 Al Riddoch <alriddoch@zepler.org>
+    - skstream/skserver.cpp: Correctly use SOCKET_ERROR instead of
+      INVALID_SOCKET when checking return value of syscalls.
+    - Add AC_CANONICAL_SYSTEM macro.
  2003-11-15 Al Riddoch <alriddoch@zepler.org>
     - Fix license typo in the rpm spec.
  2003-09-29 Al Riddoch <alriddoch@zepler.org>
